# axintera

./: .gitignore  LICENSE  README.md  debug_mcp_server.py  fixed_mcp_server.py  http_mcp_server.py  ipfsUploader.py  main.py  mcp_server_backup.py  mock_mcp_server.py  nftAuthorizer.py  pipeline.py  proper_mcp_server.py  pyproject.toml  repo_contents.txt  reputation.py  requirements.txt  rfdListener.py  sample_rfd.json  sample_rfd2.json  score_service.py  simple_mcp_server.py  solverNode.py  solver_server.py  start_mcp_server.sh  start_solver.py  stdio_mcp_server.py  submitSolution.py  test_mcp_server.py
.amazonq/: mcp.json
.devcontainer/: DOCKERFILE  devcontainer.json
abis/: FlowYieldGate_abi.json
axintera/: __init__.py
axintera/reputation/: collector.py  db.py  models.py
datasolver/: __init__.py  config.py  datasolver.py  types.py  yield_matrix.py
datasolver/providers/: huggingface.py  mock.py  provider.py
datasolver/providers/defi/: aave.py
datasolver/providers/flow/: flow_evm.py
datasolver/providers/mcp/: client.py  provider.py  router.py
datasolver/util/: http.py
examples/: rfd_yield_matrix_eth_usdc.json
mcp_sdk/: __init__.py
onchain/: hardhat.config.js  package-lock.json  package.json
onchain/cache/: solidity-files-cache.json
onchain/contracts/: FlowYieldGate.sol  RewardGauge.sol  RewardToken.sol
onchain/test/: gauge.js
tests/: conftest.py  test_client.py  test_integration_mcp.py  test_ipfs_uploader.py  test_nft_authorizer.py  test_reducer.py  test_router.py  test_router_logic.py  test_scoring.py  test_update_stats.py
(+12 files in other folders)
